<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EstadoMonstruoFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageMonstruo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5mm"
            android:layout_weight=".8"
            android:adjustViewBounds="true"
            android:scaleType="center"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:stretchColumns="*"
        android:weightSum="10" >

        <TableRow android:layout_weight="0.2" >

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/textViewNumNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="100dp" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <TextView
                android:id="@+id/textViewNivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nivel" />

            <TextView
                android:id="@+id/textViewNumNivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="100dp" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <TextView
                android:id="@+id/textViewExperiencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experiencia" />

            <TextView
                android:id="@+id/textViewNumExperiencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="100dp" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <TextView
                android:id="@+id/textViewFuerza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuerza" />

            <TextView
                android:id="@+id/textViewNumFuerza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="100dp" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <TextView
                android:id="@+id/textDestreza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destreza" />

            <TextView
                android:id="@+id/textViewNumDestreza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="100dp" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <TextView
                android:id="@+id/textViewResistencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resistencia" />

            <TextView
                android:id="@+id/textViewNumResistencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="100dp" />
        </TableRow>
    </TableLayout>

</LinearLayout>